--- a/content/2008-07-10-tulak.rst
+++ b/content/2008-07-10-tulak.rst
@@ -2,6 +2,7 @@ Tulák
 #####
 
 :tags: povídky
+:category: Povídky
 
 Sedím na nádraží, poslední vlak odjel před malou chvílí, ještě mi zní v uších
 ten jeho rytmus, slunce už zapadá za hory a já musím vstát a odejít. Zanedlouho
