--- a/content/2010-08-25-v-pasti.rst
+++ b/content/2010-08-25-v-pasti.rst
@@ -2,6 +2,7 @@ V pasti
 #######
 
 :tags: povídky
+:category: Povídky
 
 Oblohu osvítil blesk a v téměř v tu samou chvíli se ozval i hrom. Bouřka zrovna
 řádila přímo nade mnou, z oblohy se valily moře vody a já se pod skalním
