Improve categories and tags

--- a/content/2008-02-22-golden-well-2008.rst
+++ b/content/2008-02-22-golden-well-2008.rst
@@ -1,8 +1,8 @@
 Golden Well 2008
 ################
 
-:tags: Tchoříci, Šumava
-:category: Cestování
+:tags: Tchoříci, Šumava, cestování
+:category: Tchoříci
 
 .. class:: intro
 
