--- a/content/2009-03-06-jizerky-2009.rst
+++ b/content/2009-03-06-jizerky-2009.rst
@@ -1,7 +1,8 @@
 Jizerky 2009
 ############
 
-:tags: Tchoříci, Jizerky
+:tags: Tchoříci, Jizerky, cestování
+:category: Tchoříci
 
 .. class:: intro
 
