--- a/content/2011-05-02-velikonoce-2011.rst
+++ b/content/2011-05-02-velikonoce-2011.rst
@@ -1,7 +1,8 @@
 Velikonoce 2011: místy přísně střeženými
 ########################################
 
-:tags: Tchoříci, Šumava
+:tags: Tchoříci, Šumava, cestování
+:category: Tchoříci
 
 .. class:: intro
 
