--- a/content/2011-06-25-mcr-rogaining-2011.rst
+++ b/content/2011-06-25-mcr-rogaining-2011.rst
@@ -1,7 +1,8 @@
 Zelenáči na mistrovství
 #######################
 
-:tags: rogaining, Tchoříci
+:tags: rogaining, Tchoříci, cestování
+:category: Tchoříci
 
 .. class:: intro
 
