--- a/content/2011-08-04-potucky.rst
+++ b/content/2011-08-04-potucky.rst
@@ -2,6 +2,7 @@ Potůčky a potoky
 ################
 
 :tags: fotky, Šumava
+:category: Cestování
 
 `U Starého Holandu <http://www.mapy.cz/s/1Zy7>`_
 ------------------------------------------------
